# home_manager

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  project_init_skill.md
backend/: .env.example  Cargo.toml  Dockerfile  deploy_manual.md
backend/src/: config.rs  errors.rs  main.rs  middleware.rs
backend/src/db/: auth.rs  batches.rs  categories.rs  init_data.rs  init_schema.rs  items.rs  locations.rs  mod.rs  models.rs  stats.rs
backend/src/routes/: auth.rs  batches.rs  categories.rs  items.rs  locations.rs  mod.rs  stats.rs
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  batches.ts  categories.ts  client.ts  items.ts  locations.ts  stats.ts
frontend/src/components/: ConfirmDialog.tsx  Layout.tsx  Modal.tsx  Pagination.tsx  ProtectedRoute.tsx  Toast.tsx
frontend/src/errors/: errorCodes.ts
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: CategoriesPage.tsx  DashboardPage.tsx  HomePage.tsx  LocationsPage.tsx  LoginPage.tsx  RegisterPage.tsx  StatsPage.tsx
frontend/src/styles/: global.css
frontend/src/types/: index.ts
scripts/: dev.sh
